@@ -35,6 +35,7 @@ dependencies {
   errorprone 'com.uber.nullaway:nullaway:0.12.3'
 
   compileOnly 'org.jspecify:jspecify:1.0.0'
+  implementation 'com.palantir.javapoet:javapoet:0.6.0'
 
   testImplementation 'org.assertj:assertj-core:3.27.3'
   testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
@@ -46,4 +47,9 @@ dependencies {
 
 test {
   useJUnitPlatform()
+
+  jvmArgs([
+    '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'])
 }
